load("//tools/base/bazel:maven.bzl", "maven_repo")
load("//tools/base/bazel:kotlin.bzl", "kotlin_library")
load("//tools/base/build-system/integration-test/connected:connected-test.bzl", "gradle_connected_test")
load("//tools/base/bazel/avd:avd.bzl", "avd")

kotlin_library(
    name = "connected",
    srcs = glob([
        "src/main/java/**/*.kt",
        "src/main/java/**/*.java",
    ]),
    #keep sorted
    deps = [
        "//tools/base/bazel/avd:emulator_rule",
        "//tools/base/testutils:tools.testutils",
        "@maven//:junit.junit",
    ],
)

#keep sorted
TEST_DEPS = [
    ":connected",
    "//tools/analytics-library/protos/src/main/proto",
    "//tools/apksig",
    "//tools/apkzlib",
    "//tools/base/annotations",
    "//tools/base/bazel/avd:emulator_rule",
    "//tools/base/build-system:gradle-api",
    "//tools/base/build-system/builder",
    "//tools/base/build-system/builder-model",
    "//tools/base/build-system/builder-test-api:tools.builder-test-api",
    "//tools/base/build-system/gradle-api",
    "//tools/base/build-system/gradle-core",
    "//tools/base/build-system/integration-test/framework",
    "//tools/base/build-system/integration-test/framework/src/main/proto",
    "//tools/base/common:tools.common",
    "//tools/base/ddmlib:tools.ddmlib",
    "//tools/base/repository:tools.testlib",
    "//tools/base/sdk-common:tools.sdk-common",
    "//tools/base/sdklib:tools.sdklib",
    "//tools/base/testutils:tools.testutils",
    "//tools/base/zipflinger",
    "@maven//:com.google.guava.guava",
    "@maven//:com.google.protobuf.protobuf-java",
    "@maven//:com.google.protobuf.protobuf-java-util",
    "@maven//:com.google.truth.extensions.truth-java8-extension",
    "@maven//:com.google.truth.truth",
    "@maven//:org.jetbrains.kotlin.kotlin-android-extensions-runtime",
    "@maven//:org.jetbrains.kotlin.kotlin-stdlib",
    "@maven//:org.jetbrains.kotlin.kotlin-test",
]

avd(name = "avd")

#keep sorted
TEST_DATA = [
    ":avd",
    "//prebuilts/studio/sdk:build-tools/latest",
    "//prebuilts/studio/sdk:platform-tools",
    "//prebuilts/studio/sdk:platforms/latest",
    "//tools/base/build-system:gradle-distrib",
    "//tools/base/build-system/aapt2:aapt2_for_tests",
]

#keep sorted
TEST_MAVEN_REPOS = [
    "//tools/base/build-system:gradle_plugin_no_databinding_repo",
    "//tools/base/build-system/integration-test:androidx_latest",
    "//tools/base/build-system/integration-test:kotlin_gradle_plugin_prebuilts",
    "//tools/base/build-system/integration-test:support_library_latest",
    "//tools/base/build-system/integration-test:utp_plugins",
    "//tools/base/build-system/integration-test/connected:prebuilts",
]

gradle_connected_test(
    name = "AdditionalTestOutputConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/additionalTestOutput"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "AdditionalTestOutputOverrideConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/additionalTestOutputOverride"],
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "AndroidTestResourcesConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "AnnotationProcessorConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ApiConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/api"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ApplibtestConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/applibtest"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "AttrOrderConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/attrOrder"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "BasicConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/basic"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "CmakeJniLibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/nativebuild/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/ndkJniLib",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ComposeHelloWorldConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/composeHelloWorld"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS + [
        "//tools/base/build-system/integration-test:kotlin_gradle_plugin_1_4_32_prebuilts",
    ],
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "CoreLibraryDesugarConversionConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "CustomTestedApksTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS + ["//tools/base/build-system/integration-test:androidx_test_latest"],
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "D8DesugaringConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DataBindingExternalArtifactDependencyConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/databinding/",
    data = TEST_DATA + [
        "//tools/data-binding:integration-test-projects",
        "//tools/data-binding:integration-test-projects-support",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = [
        "//tools/data-binding:data_binding_runtime",
    ],
    # TEST_MAVEN_REPOS with databinding
    maven_repos = [
        "//tools/base/build-system:gradle_plugin_repo",
        "//tools/base/build-system/integration-test:androidx_latest",
        "//tools/base/build-system/integration-test:support_library_latest",
        "//tools/base/build-system/integration-test/connected:prebuilts",
        "//tools/base/build-system/integration-test/connected:databinding_prebuilts",
        "//tools/base/build-system/integration-test:utp_plugins",
    ],
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DataBindingIntegrationTestAppsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/databinding/",
    data = TEST_DATA + [
        "//tools/data-binding:integration-test-projects",
        "//tools/data-binding:integration-test-projects-support",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repo_zips = [
        "//tools/data-binding:data_binding_runtime",
    ],
    # TEST_MAVEN_REPOS with databinding
    maven_repos = [
        "//tools/base/build-system:gradle_plugin_repo",
        "//tools/base/build-system/integration-test:androidx_latest",
        "//tools/base/build-system/integration-test:support_library_latest",
        "//tools/base/build-system/integration-test:kotlin_gradle_plugin_prebuilts",
        "//tools/base/build-system/integration-test/connected:prebuilts",
        "//tools/base/build-system/integration-test/connected:databinding_prebuilts",
        "//tools/base/build-system/integration-test:utp_plugins",
    ],
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DensitySplitConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/densitySplit"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DependenciesConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/dependencies"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DynamicFeatureConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/feature/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FlavoredConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/flavored"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FlavoredlibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/flavoredlib"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FlavorlibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/flavorlib"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FlavorsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/flavors"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "JacocoConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "JarsInLibrariesConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/assets"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "KotlinAppConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/kotlinApp"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "LibMinifyJarDepConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/libMinifyJarDep"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "LibMinifyLibDepConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/libMinifyLibDep"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "LibsTestConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/libsTest"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "LibTestDepConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/libTestDep"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MigratedConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/migrated"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MinifyConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/minify"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MinifyLibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/minifyLib"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MlModelBindingConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + [
        "//tools/base/build-system/integration-test:test-projects/mlModelBinding",
        "//prebuilts/tools/common/mlkit/testData",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MultiDexConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/multiDex"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MultiDexWithLibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/multiDexWithLib"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MultiProjectConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/multiproject"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MultiresConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/multires"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NdkConnectedCheckTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NdkJniLibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/ndkJniLib",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NdkLibPrebuiltsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/ndkLibPrebuilts",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NdkSanAngelesConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/ndkSanAngeles",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NoSplitNdkVariantsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "Overlay1ConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/overlay1"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "Overlay2ConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/overlay2"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "Overlay3ConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/overlay3"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "PkgOverrideConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/pkgOverride"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "RenderscriptNdkConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/nativebuild/",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/renderscriptNdk",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ResValueTypeConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ShardingConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/appWithTests"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SameNamedLibsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/sameNamedLibs"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SeparateTestModuleConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/separateTestModule"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SeparateTestModuleWithMinifiedAppConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/separateTestModuleWithMinifiedApp"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SeparateTestWithAarDependencyConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/separateTestModule"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SeparateTestWithMinificationButNoObfuscationConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/separateTestWithMinificationButNoObfuscation"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SigningConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "TestingSupportLibraryConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "TestWithSameDepAsAppConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/dependencies/",
    data = TEST_DATA,
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "UtpConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + [
        "//tools/adt/idea/utp:addGradleAndroidTestListener",
        "//tools/base/build-system/integration-test:test-projects/utp",
    ],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FailureRetentionConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/failureRetention"],
    flaky = True,  # b/148626301 flaky emulator connectivity
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

# Maven repo with all the dependencies required by test projects.
#
# Quick way of updating this list:
# - Run the new test with bazel
# - Copy the output log to $PWD/test.log
# - Run this command:
# grep -F '> Could not find' test.log \
#   | sed -e 's:> Could not find :"//prebuilts/tools/common/m2/repository/:' \
#   | sed -e 's/:/\//g' \
#   | sed -e 's/\.$/:jar",/' \
#   | sed -e 's/\([a-z]\)\.\([a-z]\)/\1\/\2/g'
maven_repo(
    name = "prebuilts",
    # keep sorted
    artifacts = [
        "//prebuilts/tools/common/m2:android.arch.core.common.1.0.0",
        "//prebuilts/tools/common/m2:android.arch.core.common.1.1.0",
        "//prebuilts/tools/common/m2:android.arch.core.runtime.1.1.0_aar",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.common.1.1.0",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.livedata.1.1.1_aar",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.livedata-core.1.1.0_aar",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.runtime.1.1.0_aar",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.viewmodel.1.1.0_aar",
        "//prebuilts/tools/common/m2:android.arch.navigation.navigation-common.1.0.0_aar",
        "//prebuilts/tools/common/m2:android.arch.navigation.navigation-fragment.1.0.0_aar",
        "//prebuilts/tools/common/m2:android.arch.navigation.navigation-runtime.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.activity.activity.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.activity.activity.1.2.0-alpha02_aar",
        "//prebuilts/tools/common/m2:androidx.activity.activity.1.2.0-alpha07_aar",
        "//prebuilts/tools/common/m2:androidx.activity.activity.1.3.0-alpha02_aar",
        "//prebuilts/tools/common/m2:androidx.activity.activity-compose.1.3.0-alpha02_aar",
        "//prebuilts/tools/common/m2:androidx.activity.activity-ktx.1.3.0-alpha02_aar",
        "//prebuilts/tools/common/m2:androidx.annotation.annotation.1.1.0",
        "//prebuilts/tools/common/m2:androidx.annotation.annotation.1.2.0-rc01",
        "//prebuilts/tools/common/m2:androidx.annotation.annotation-experimental.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.annotation.annotation-experimental.1.1.0-alpha01_aar",
        "//prebuilts/tools/common/m2:androidx.appcompat.appcompat.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.appcompat.appcompat.1.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.appcompat.appcompat.1.3.0-beta01_aar",
        "//prebuilts/tools/common/m2:androidx.appcompat.appcompat-resources.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.appcompat.appcompat-resources.1.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.appcompat.appcompat-resources.1.3.0-beta01_aar",
        "//prebuilts/tools/common/m2:androidx.arch.core.core-common.2.1.0",
        "//prebuilts/tools/common/m2:androidx.arch.core.core-runtime.2.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.autofill.autofill.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.collection.collection.1.1.0",
        "//prebuilts/tools/common/m2:androidx.compose.animation.animation.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.animation.animation-core.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.compiler.compiler.1.0.0-beta07",
        "//prebuilts/tools/common/m2:androidx.compose.foundation.foundation.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.foundation.foundation-layout.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.material.material.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.material.material-icons-core.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.material.material-ripple.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.runtime.runtime.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.runtime.runtime-saveable.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.ui.ui.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.ui.ui-geometry.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.ui.ui-graphics.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.ui.ui-text.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.ui.ui-tooling.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.ui.ui-tooling-data.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.ui.ui-unit.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.compose.ui.ui-util.1.0.0-beta07_aar",
        "//prebuilts/tools/common/m2:androidx.constraintlayout.constraintlayout-core.1.0.0-alpha1",
        "//prebuilts/tools/common/m2:androidx.core.core.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.core.core.1.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.core.core.1.3.0_aar",
        "//prebuilts/tools/common/m2:androidx.core.core.1.5.0-beta01_aar",
        "//prebuilts/tools/common/m2:androidx.core.core-ktx.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.dynamicanimation.dynamicanimation.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.fragment.fragment.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.fragment.fragment.1.3.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-common.2.1.0",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-common.2.3.0",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-common.2.3.0-alpha01",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-livedata-core.2.3.0-alpha01_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-livedata-core.2.3.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-livedata-core-ktx.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-livedata-ktx.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-runtime.2.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-runtime.2.3.0-alpha01_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-runtime.2.3.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-runtime-ktx.2.3.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel.2.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel.2.3.0-alpha01_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel.2.3.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel-ktx.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel-ktx.2.3.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel-savedstate.2.3.0-alpha01_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel-savedstate.2.3.0_aar",
        "//prebuilts/tools/common/m2:androidx.navigation.navigation-common.2.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.navigation.navigation-fragment.2.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.navigation.navigation-runtime.2.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.savedstate.savedstate.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.savedstate.savedstate.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.savedstate.savedstate-ktx.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.core.1.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.core.1.4.0-alpha06_aar",
        "//prebuilts/tools/common/m2:androidx.test.espresso.espresso-core.3.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.espresso.espresso-idling-resource.3.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.ext.junit.1.1.1_aar",
        "//prebuilts/tools/common/m2:androidx.test.ext.junit.1.1.3-alpha02_aar",
        "//prebuilts/tools/common/m2:androidx.test.monitor.1.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.monitor.1.4.0-alpha06_aar",
        "//prebuilts/tools/common/m2:androidx.test.orchestrator.1.4.0-alpha06_apk",
        "//prebuilts/tools/common/m2:androidx.test.rules.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.rules.1.4.0-alpha06_aar",
        "//prebuilts/tools/common/m2:androidx.test.runner.1.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.runner.1.4.0-alpha06_aar",
        "//prebuilts/tools/common/m2:androidx.test.services.storage.1.4.0-alpha06_aar",
        "//prebuilts/tools/common/m2:androidx.test.services.test-services.1.4.0-alpha06_apk",
        "//prebuilts/tools/common/m2:androidx.tracing.tracing.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.vectordrawable.vectordrawable.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.vectordrawable.vectordrawable-animated.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.versionedparcelable.versionedparcelable.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.versionedparcelable.versionedparcelable.1.1.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.multidex.1.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.support.multidex-instrumentation.1.0.2_aar",
        "//prebuilts/tools/common/m2:com.android.tools.desugar_jdk_libs.1.1.5",
        "//prebuilts/tools/common/m2:com.android.tools.desugar_jdk_libs_configuration.1.1.5",
        "//prebuilts/tools/common/m2:com.google.android.gms.play-services-base.15.0.1_aar",
        "//prebuilts/tools/common/m2:com.google.android.gms.play-services-basement.15.0.1_aar",
        "//prebuilts/tools/common/m2:com.google.android.gms.play-services-tasks.15.0.1_aar",
        "//prebuilts/tools/common/m2:com.google.code.findbugs.jsr305.1.3.9",
        "//prebuilts/tools/common/m2:com.google.code.findbugs.jsr305.2.0.1",
        "//prebuilts/tools/common/m2:com.google.code.gson.gson.2.7",
        "//prebuilts/tools/common/m2:com.google.code.gson.gson.2.8.6",
        "//prebuilts/tools/common/m2:com.google.flatbuffers.flatbuffers-java.1.12.0",
        "//prebuilts/tools/common/m2:com.google.guava.guava.19.0",
        "//prebuilts/tools/common/m2:com.google.testing.platform.android-device-provider-gradle.0.0.8-alpha07",
        "//prebuilts/tools/common/m2:com.google.testing.platform.android-device-provider-local.0.0.8-alpha07",
        "//prebuilts/tools/common/m2:com.google.testing.platform.android-driver-instrumentation.0.0.8-alpha07",
        "//prebuilts/tools/common/m2:com.google.testing.platform.android-test-plugin.0.0.8-alpha07",
        "//prebuilts/tools/common/m2:com.google.testing.platform.android-test-plugin-host-device-info.0.0.8-alpha07",
        "//prebuilts/tools/common/m2:com.google.testing.platform.android-test-plugin-host-retention.0.0.8-alpha07",
        "//prebuilts/tools/common/m2:com.google.testing.platform.core.0.0.8-alpha07",
        "//prebuilts/tools/common/m2:com.google.testing.platform.core-proto.0.0.8-alpha07",
        "//prebuilts/tools/common/m2:com.google.testing.platform.launcher.0.0.8-alpha07",
        "//prebuilts/tools/common/m2:com.squareup.javawriter.2.1.1",
        "//prebuilts/tools/common/m2:org.apache.commons.commons-compress.1.18",
        "//prebuilts/tools/common/m2:org.checkerframework.checker-qual.2.5.8",
        "//prebuilts/tools/common/m2:org.hamcrest.hamcrest-integration.1.3",
        "//prebuilts/tools/common/m2:org.hamcrest.hamcrest-library.1.3",
        "//prebuilts/tools/common/m2:org.jacoco.org.jacoco.agent.0.7.4.201502262128",
        "//prebuilts/tools/common/m2:org.jacoco.org.jacoco.agent.0.8.3",
        "//prebuilts/tools/common/m2:org.jacoco.org.jacoco.ant.0.7.4.201502262128",
        "//prebuilts/tools/common/m2:org.jacoco.org.jacoco.ant.0.8.3",
        "//prebuilts/tools/common/m2:org.jacoco.org.jacoco.core.0.7.4.201502262128",
        "//prebuilts/tools/common/m2:org.jacoco.org.jacoco.core.0.8.3",
        "//prebuilts/tools/common/m2:org.jacoco.org.jacoco.report.0.7.4.201502262128",
        "//prebuilts/tools/common/m2:org.jacoco.org.jacoco.report.0.8.3",
        "//prebuilts/tools/common/m2:org.jetbrains.kotlinx.kotlinx-collections-immutable-jvm.0.3.4",
        "//prebuilts/tools/common/m2:org.jetbrains.kotlinx.kotlinx-coroutines-android.1.4.1",
        "//prebuilts/tools/common/m2:org.jetbrains.kotlinx.kotlinx-coroutines-android.1.4.3",
        "//prebuilts/tools/common/m2:org.jetbrains.kotlinx.kotlinx-coroutines-core.1.3.8",
        "//prebuilts/tools/common/m2:org.jetbrains.kotlinx.kotlinx-coroutines-core.1.4.1",
        "//prebuilts/tools/common/m2:org.jetbrains.kotlinx.kotlinx-coroutines-core.1.4.3",
        "//prebuilts/tools/common/m2:org.jetbrains.kotlinx.kotlinx-coroutines-core-common.1.3.6",
        "//prebuilts/tools/common/m2:org.jetbrains.kotlinx.kotlinx-coroutines-core-jvm.1.4.3",
        "//prebuilts/tools/common/m2:org.ow2.asm.asm.5.0.1",
        "//prebuilts/tools/common/m2:org.ow2.asm.asm-commons.5.0.1",
        "//prebuilts/tools/common/m2:org.ow2.asm.asm-debug-all.5.0.1",
        "//prebuilts/tools/common/m2:org.ow2.asm.asm-debug-all.5.2",
        "//prebuilts/tools/common/m2:org.ow2.asm.asm-tree.5.0.1",
        "//prebuilts/tools/common/m2:org.tensorflow.tensorflow-lite.2.4.0_aar",
        "//prebuilts/tools/common/m2:org.tensorflow.tensorflow-lite-metadata.0.1.0",
        "//prebuilts/tools/common/m2:org.tensorflow.tensorflow-lite-support.0.1.0_aar",
    ],
    visibility = ["__subpackages__"],
)

# Maven repo with all the dependencies required by databinding tests.
#
# Quick way of updating this list:
# - Run the new test with bazel
# - Copy the output log to $PWD/test.log
# - Run this command:
# grep -F '> Could not find' test.log \
#   | sed -e 's:> Could not find :"//prebuilts/tools/common/m2/repository/:' \
#   | sed -e 's/:/\//g' \
#   | sed -e 's/\.$/:jar",/' \
#   | sed -e 's/\([a-z]\)\.\([a-z]\)/\1\/\2/g'
maven_repo(
    name = "databinding_prebuilts",
    # keep sorted
    artifacts = [
        "//prebuilts/tools/common/m2:android.arch.lifecycle.common.1.0.3",
        "//prebuilts/tools/common/m2:android.arch.lifecycle.runtime.1.0.3_aar",
        "//prebuilts/tools/common/m2:androidx.activity.activity.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.appcompat.appcompat.1.0.2_aar",
        "//prebuilts/tools/common/m2:androidx.cardview.cardview.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.core.core.1.0.1_aar",
        "//prebuilts/tools/common/m2:androidx.fragment.fragment.1.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-common.2.2.0",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-extensions.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-livedata.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-livedata-core.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-process.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-runtime.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-runtime-ktx.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-service.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel.2.2.0_aar",
        "//prebuilts/tools/common/m2:androidx.lifecycle.lifecycle-viewmodel-savedstate.1.0.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.espresso.espresso-core.3.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.espresso.espresso-idling-resource.3.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.monitor.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.test.runner.1.1.0_aar",
        "//prebuilts/tools/common/m2:androidx.vectordrawable.vectordrawable.1.0.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.animated-vector-drawable.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.appcompat-v7.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-annotations.25.4.0",
        "//prebuilts/tools/common/m2:com.android.support.support-annotations.26.1.0",
        "//prebuilts/tools/common/m2:com.android.support.support-compat.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-core-ui.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-core-utils.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-fragment.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-media-compat.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-v4.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.support-vector-drawable.26.1.0_aar",
        "//prebuilts/tools/common/m2:com.android.support.test.espresso.espresso-core.3.0.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.test.espresso.espresso-idling-resource.3.0.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.test.rules.1.0.1_aar",
        "//prebuilts/tools/common/m2:com.android.support.test.runner.1.0.1_aar",
    ],
    visibility = ["__subpackages__"],
)
